frontend/src/index.css
body {
  background-color: #0d1117;
  color: white;
  overflow-x: hidden;
} /*sets colors for background nad text , hides overflow on sides*/

.readme-container {
  width: 60vw; 
  margin: 0 auto; 
}/*sets widht and margin for component*/

.profile-container{
  max-width: max-content;
} /*gives maxwidth size for profile picute*/

.projects-container img{
  width: 100%;
  height: 100%;
}/*gives max width and height for responsive design*/

.alert-container {
  top: 35%;
  left: 45%;
}/*sets position of alert message component on large devices*/
.header-rigth{
    display: flex;
    justify-content: end;
  }

@media screen and (max-width: 767px) {
  
  .alert-container {
    top: 25%;
    left: 25%;
  }/*sets alert message components position on smaller devices*/
  .projects-container{
    margin: 20px;
    width: auto;
  }/*gives less margin to component on larger devices*/
}/*for tablet devices*/

@media screen and (max-width: 576px) {

  .profile-container{
    width: 100vw;
    padding: 5vw;
    margin: 0;
  }/*gives width to profile container on small devices*/
  .readme-container {
    width: 93vw; 
  }/*gives with to readme container on smalll  devices*/
  .header-rigth{
    display: flex;
    justify-content: start;
  }
}/*for mobile devices*/

